# payerpricing

./: .gitignore  AGENTS.md  README.md  discover_index_urls_windows.py  requirements.txt
cloud/: README.md  __init__.py  coordinator.py  rust_worker.py  shard_builder.py  storage.py  worker.py
deploy/azure-linux/: README.md  env.example  repo-upload-files.txt  run_coordinator.sh  run_rust_worker.sh  run_worker.sh  setup_vm.sh
ingest/: discover_index_urls.py  export_npis_text.py  load_nppes.py  scan_pricing_urls.py  stream_index.py  stream_pricing.py
rust/stream_pricing_serde/: Cargo.toml  README.md
rust/stream_pricing_serde/src/: main.rs
utils/: __init__.py  schema.py
