[package]
name = "stream_pricing_serde"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
arrow = "54"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
parquet = { version = "54", features = ["arrow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
